# dblstreamgen

./: .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  Makefile  NOTICE  QUICKSTART.md  README.md  V0.1.0_CLEANUP_COMPLETE.md  V0.1.0_RELEASE.md  pyproject.toml
.github/: TOOLING_GUIDE.md
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
benchmarks/: hidden_column_throughput.py
docs/: SCALE_TESTING_GUIDE.md  TYPE_SYSTEM.md  YAML_CONFIG_REFERENCE.md
sample/: README.md  UNITY_CATALOG_SETUP.md
sample/configs/: 1500_events_config.yaml  config.yaml  config_generation.yaml  config_source_kinesis.yaml  config_v0.1.0.yaml  extended_types_config.yaml  faker_config.yaml  nested_types_config.yaml  simple_config.yaml  stress_test_1500_events.yaml
sample/notebooks/: 01_install_and_test.py  01_simple_example.py  01_simple_example_v0.1.0.py  02_stream_generator.py
scripts/: build-wheel.sh  check.sh
src/dblstreamgen/: __init__.py  config.py  serialization.py
src/dblstreamgen/builder/: __init__.py  field_mappers.py  spec_builder.py
src/dblstreamgen/generators/: __init__.py  stream.py
src/dblstreamgen/orchestrator/: __init__.py  serialization.py  stream_orchestrator.py
src/dblstreamgen/publishers/: __init__.py  kinesis.py
src/dblstreamgen/scenario/: __init__.py  builder.py  field_builder.py  runner.py  scenario.py  spec_dedup.py  types.py
src/dblstreamgen/sinks/: __init__.py  kinesis_writer.py
tests/: conftest.py
tests/characterization/: test_output_correctness.py
tests/e2e/: test_scenario.py
tests/integration/: test_builder.py  test_field_builder.py  test_serialization.py
tests/unit/: test_config.py  test_field_builder.py  test_runner_plan.py  test_spec_dedup.py
